Fix small layout problems in the mobile/tablet views
- On Nextcloud 25, the toggle button for the collapsible navigation
  pane overlapped the pause button. This was because the related css
  rule was no longer provided by the core.

- In the tablet layout (regardless of the cloud version), the toggle
  button for the collapsible navigation pane overlapped the first
  title of the view when the playback had not been started. There was
  room reserved for this in the mobile layout but not in the tablet
  layout.

--- a/css/music-mobile.css
+++ b/css/music-mobile.css
@@ -9,19 +9,8 @@
  * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
  * @copyright Morris Jobke 2013, 2014
  * @copyright Jan-Christoph Borchardt 2014
- * @copyright Pauli Järvinen 2017 - 2021
+ * @copyright Pauli Järvinen 2017 - 2022
  */
-
-/* Adjust to layout with collapsible navigation bar */
-@media only screen and (max-width: 768px) {
-	#app-view {
-		left: 0px;
-	}
-
-	#app-view:not(.started) {
-		padding-top: 66px;
-	}
-}
 
 .mobile #app-view {
 	padding-left: 4px;
