--- a/css/music-tablet.css
+++ b/css/music-tablet.css
@@ -9,8 +9,22 @@
  * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
  * @copyright Morris Jobke 2013, 2014
  * @copyright Jan-Christoph Borchardt 2014
- * @copyright Pauli Järvinen 2016 - 2021
+ * @copyright Pauli Järvinen 2016 - 2022
  */
+
+/* Adjust layout so that there is room for the toggle button of the collapsible navigation pane.
+   The rule has to match the one used by the core to make the pane collpsible.
+ */
+@media only screen and (max-width: 1024px) {
+
+	#controls {
+		padding-left: 44px;
+	}
+
+	#app-view {
+		padding-top: 66px;
+	}
+}
 
 .tablet #play-controls {
 	margin-left: 0;
